--- a/kalkulator-proizvodnje/index.html
+++ b/kalkulator-proizvodnje/index.html
@@ -38,14 +38,18 @@
 
         <!-- Istorija -->
         <div class="quick-actions">
+            <a href="vreme-po-komadu.html" class="action-btn action-btn-special" title="Израчунај време за један комад">
+                <span class="action-icon">⏱️</span>
+                <span class="action-text">Време по Комаду</span>
+            </a>
             <a href="history.html" class="action-btn history-btn" title="Преглед историје калкулација">
                 <span class="action-icon">📊</span>
                 <span class="action-text">Историја</span>
                 <span id="historyCount" class="badge">0</span>
             </a>
-            <a href="vreme-po-komadu.html" class="action-btn action-btn-special" title="Израчунај време за један комад">
-                <span class="action-icon">⏱️</span>
-                <span class="action-text">Време по Комаду</span>
+            <a href="koliko-komada.html" class="action-btn action-btn-special" title="Израчунај колико комада може да се уради">
+                <span class="action-icon">🔢</span>
+                <span class="action-text">Колико Комада</span>
             </a>
         </div>
 
