--- a/index.html
+++ b/index.html
@@ -555,6 +555,29 @@
 							</div>
 						</div>
 					</div>
+
+					<!-- FilmFinder (Tragač) Project -->
+					<div class="col-md-6 col-lg-4">
+						<div class="card h-100 border-0 shadow-sm">
+							<div class="card-body">
+								<h5 class="card-title">FilmFinder - Tragač Filmova</h5>
+								<p class="card-text">
+									Inteligentni sistem preporuke filmova koji pomaže korisnicima da pronađu savršen film na osnovu žanra, perioda i trenutnog raspoloženja.
+								</p>
+								<div class="d-flex gap-2 mb-3">
+									<span class="badge bg-primary">HTML5</span>
+									<span class="badge bg-info">Bootstrap 5</span>
+									<span class="badge bg-secondary">JavaScript</span>
+								</div>
+								<a
+									href="tragac/index.html"
+									class="btn btn-outline-primary w-100"
+									target="_blank"
+									>Pogledaj Projekat</a
+								>
+							</div>
+						</div>
+					</div>
 				</div>
 			</div>
 		</section>
