--- a/tragac/index.html
+++ b/tragac/index.html
@@ -297,6 +297,9 @@
 
                         <!-- Action Buttons -->
                         <div class="text-center mt-4">
+                            <button class="btn btn-success btn-lg me-2" onclick="getNextSuggestion()">
+                                <i class="bi bi-skip-forward-fill"></i> Sledeći Predlog
+                            </button>
                             <button class="btn btn-primary btn-lg" onclick="resetApp()">
                                 <i class="bi bi-arrow-repeat"></i> Preporuči Drugi Film
                             </button>
