--- a/tragac/index.html
+++ b/tragac/index.html
@@ -73,6 +73,9 @@
                     <!-- Step 1: Genre -->
                     <div id="step1" class="survey-step">
                         <h5 class="mb-3">1. Koji žanr te zanima?</h5>
+                        <p class="text-muted small mb-3">
+                            <i class="bi bi-info-circle"></i> Možeš izabrati više žanrova - film će sadržati SVE izabrane žanrove!
+                        </p>
                         <div class="row g-3">
                             <div class="col-md-4 col-sm-6">
                                 <input type="checkbox" class="btn-check" id="genre-action" value="action" autocomplete="off">
@@ -160,6 +163,9 @@
                     <!-- Step 3: Mood -->
                     <div id="step3" class="survey-step d-none">
                         <h5 class="mb-4">3. Kakvo je tvoje trenutno raspoloženje?</h5>
+                        <p class="text-muted small mb-3">
+                            <i class="bi bi-info-circle"></i> Film će biti odabran da odgovara tvojim emocijama (npr. nećeš dobiti tužnu dramu ako si srećan)
+                        </p>
                         
                         <!-- Mobile: Dropdown -->
                         <select class="form-select form-select-lg mb-4 d-md-none" id="moodSelectMobile">
