--- a/tragac/index.html
+++ b/tragac/index.html
@@ -24,7 +24,7 @@
     <!-- Open Graph / Facebook / LinkedIn / WhatsApp / Telegram / Viber / Discord / Slack -->
     <meta property="og:type" content="website">
     <meta property="og:title" content="FilmFinder - Pronađi Savršen Film">
-    <meta property="og:description" content="Aplikacija za preporuke filmova">
+    <meta property="og:description" content="🎬 Pronađi savršen film za sebe! Odgovori na nekoliko pitanja i dobij personalizovane preporuke filmova koje ćeš voleti. Besplatno, brzo i jednostavno!">
     <meta property="og:image" content="https://djoleajk.github.io/tragac/filmfinderlogo.png">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
@@ -37,14 +37,14 @@
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="FilmFinder - Pronađi Savršen Film">
-    <meta name="twitter:description" content="Aplikacija za preporuke filmova">
+    <meta name="twitter:description" content="🎬 Pronađi savršen film za sebe! Odgovori na nekoliko pitanja i dobij personalizovane preporuke filmova koje ćeš voleti. Besplatno, brzo i jednostavno!">
     <meta name="twitter:image" content="https://djoleajk.github.io/tragac/filmfinderlogo.png">
     <meta name="twitter:image:alt" content="FilmFinder - Pronađi Savršen Film">
     <meta name="twitter:site" content="@FilmFinder">
     <meta name="twitter:creator" content="@FilmFinder">
     
     <!-- WhatsApp / Telegram / Viber (koriste Open Graph, ali dodajemo dodatne tagove) -->
-    <meta name="description" content="Aplikacija za preporuke filmova">
+    <meta name="description" content="🎬 FilmFinder - Pronađi savršen film za sebe! Odgovori na nekoliko pitanja i dobij personalizovane preporuke filmova koje ćeš voleti. Besplatno, brzo i jednostavno!">
     
     <!-- LinkedIn (koristi Open Graph, ali dodajemo specifične tagove) -->
     <meta property="linkedin:owner" content="FilmFinder">
