--- a/index.html
+++ b/index.html
@@ -578,6 +578,29 @@
 							</div>
 						</div>
 					</div>
+
+					<!-- PERIODI Project -->
+					<div class="col-md-6 col-lg-4">
+						<div class="card h-100 border-0 shadow-sm">
+							<div class="card-body">
+								<h5 class="card-title">PERIodi - Praćenje Ciklusa</h5>
+								<p class="card-text">
+									Aplikacija za praćenje menstrualnog ciklusa sa dashboard-om, kalendarom, praćenjem simptoma, notifikacijama i modernim UI dizajnom.
+								</p>
+								<div class="d-flex gap-2 mb-3">
+									<span class="badge bg-primary">HTML5</span>
+									<span class="badge bg-info">CSS3</span>
+									<span class="badge bg-secondary">JavaScript</span>
+								</div>
+								<a
+									href="PERIODI/index.html"
+									class="btn btn-outline-primary w-100"
+									target="_blank"
+									>Pogledaj Projekat</a
+								>
+							</div>
+						</div>
+					</div>
 				</div>
 			</div>
 		</section>
