Correct spelling of 'PERIodi' to 'Periodi'

--- a/index.html
+++ b/index.html
@@ -583,7 +583,7 @@
 					<div class="col-md-6 col-lg-4">
 						<div class="card h-100 border-0 shadow-sm">
 							<div class="card-body">
-								<h5 class="card-title">PERIodi - Praćenje Ciklusa</h5>
+								<h5 class="card-title">Periodi - Praćenje Ciklusa</h5>
 								<p class="card-text">
 									Aplikacija za praćenje menstrualnog ciklusa sa dashboard-om, kalendarom, praćenjem simptoma, notifikacijama i modernim UI dizajnom.
 								</p>
