--- a/PERIODI/index.html
+++ b/PERIODI/index.html
@@ -2,7 +2,7 @@
 <html lang="sr">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0, user-scalable=yes">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
     <meta name="description" content="Jednostavna aplikacija za praćenje menstrualnog ciklusa">
     <meta name="theme-color" content="#e91e63">
     <meta name="mobile-web-app-capable" content="yes">
