--- a/PERIODI/index.html
+++ b/PERIODI/index.html
@@ -3,11 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
-    <meta name="description" content="Jednostavna aplikacija za praćenje menstrualnog ciklusa">
+    <meta name="description" content="Jednostavna aplikacija za praćenje menstrualnog ciklusa sa AI anketama i predviđanjima">
     <meta name="theme-color" content="#e91e63">
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="default">
+    <meta name="apple-mobile-web-app-title" content="Periodi">
+    <!-- Android PWA meta tags -->
+    <meta name="application-name" content="Periodi">
+    <meta name="msapplication-TileColor" content="#e91e63">
+    <meta name="msapplication-tap-highlight" content="no">
     <title>Periodi - Praćenje Menstrualnog Ciklusa</title>
     <link rel="manifest" href="manifest.json">
     <!-- Bootstrap CSS -->
