--- a/index.html
+++ b/index.html
@@ -601,6 +601,29 @@
 							</div>
 						</div>
 					</div>
+
+					<!-- Evidencija Krvnog Pritiska Project -->
+					<div class="col-md-6 col-lg-4">
+						<div class="card h-100 border-0 shadow-sm">
+							<div class="card-body">
+								<h5 class="card-title">Evidencija Krvnog Pritiska</h5>
+								<p class="card-text">
+									Aplikacija za praćenje krvnog pritiska sa unosom merenja, pregledom istorije, statistikom, grafikonskim prikazom i AI analizom zdravstvenog stanja.
+								</p>
+								<div class="d-flex gap-2 mb-3">
+									<span class="badge bg-primary">HTML5</span>
+									<span class="badge bg-info">CSS3</span>
+									<span class="badge bg-secondary">JavaScript</span>
+								</div>
+								<a
+									href="Evidencija krvnog pritiska/index.html"
+									class="btn btn-outline-primary w-100"
+									target="_blank"
+									>Pogledaj Projekat</a
+								>
+							</div>
+						</div>
+					</div>
 				</div>
 			</div>
 		</section>
