--- a/Evidencija krvnog pritiska/index.html
+++ b/Evidencija krvnog pritiska/index.html
@@ -137,10 +137,10 @@
                     <h2 class="section-title"><i class="fas fa-list"></i> Pregled Merenja</h2>
                     <div class="section-controls">
                         <select id="periodFilter" class="filter-select">
-                            <option value="all">Sva merenja</option>
-                            <option value="today">Danas</option>
+                            <option value="today" selected>Danas</option>
                             <option value="week">Ova nedelja</option>
                             <option value="month">Ovaj mesec</option>
+                            <option value="all">Sva merenja</option>
                         </select>
                         <button id="exportBtn" class="btn btn-secondary btn-sm">
                             <i class="fas fa-download"></i> Export JSON
@@ -165,6 +165,9 @@
                             <!-- Podaci će biti dinamički dodati -->
                         </tbody>
                     </table>
+                    <div id="measurementsCardsContainer" class="measurements-cards">
+                        <!-- Kartice će biti dinamički dodate -->
+                    </div>
                     <div id="emptyState" class="empty-state">
                         <i class="fas fa-inbox"></i>
                         <p>Nema sačuvanih merenja. Dodajte prvo merenje!</p>
